@@ -41,7 +41,9 @@ public class PolygonImageMutationTest
         PolygonImageMutation mutation = new PolygonImageMutation(new Dimension(100, 100),
                                                                  Probability.ONE, // Guaranteed mutation.
                                                                  new ConstantGenerator<Double>(1d), // Fixed colour mutation.
-                                                                 new ConstantGenerator<Double>(0d)); // No vertex mutation.
+                                                                 Probability.ZERO,
+                                                                 Probability.ZERO,
+                                                                 null);
         // A grey triangle.
         final ColouredPolygon polygon = new ColouredPolygon(new Color(128, 128, 128, 128),
                                                             Arrays.asList(new Point(0, 0),
@@ -56,28 +58,5 @@ public class PolygonImageMutationTest
         assert mutatedColor.getGreen() == 129 : "Green component should have been incremented, is " + mutatedColor.getGreen();
         assert mutatedColor.getBlue() == 129 : "Blue component should have been incremented, is " + mutatedColor.getBlue();
         assert mutatedColor.getAlpha() == 129 : "Alpha component should have been incremented, is " + mutatedColor.getAlpha();
-    }
-
-
-    @Test
-    public void testVertexMutation()
-    {
-        PolygonImageMutation mutation = new PolygonImageMutation(new Dimension(100, 100),
-                                                                 Probability.ONE, // Guaranteed mutation.
-                                                                 new ConstantGenerator<Double>(0d), // No colour mutation.
-                                                                 new ConstantGenerator<Double>(1d)); // Fixed vertex mutation.
-        // A grey triangle.
-        final ColouredPolygon polygon = new ColouredPolygon(new Color(128, 128, 128, 128),
-                                                            Arrays.asList(new Point(0, 0),
-                                                                          new Point(50, 50),
-                                                                          new Point(0, 75)));
-        List<ColouredPolygon> image = Arrays.asList(polygon);
-        List<List<ColouredPolygon>> images = new ArrayList<List<ColouredPolygon>>(1);
-        images.add(image);
-        List<List<ColouredPolygon>> mutatedImages = mutation.apply(images, rng);
-        List<Point> mutatedVertices = mutatedImages.get(0).get(0).getVertices();
-        assert mutatedVertices.get(0).x == 1 && mutatedVertices.get(0).y == 1 : "First point should be (1, 1)";
-        assert mutatedVertices.get(1).x == 51 && mutatedVertices.get(1).y == 51 : "First point should be (51, 51)";
-        assert mutatedVertices.get(2).x == 1 && mutatedVertices.get(2).y == 76 : "First point should be (1, 76)";
     }
 }
